FEATURE: - markup for question-page - component question-page linked to get-info service

--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -1,10 +1,10 @@
 <table>
   <thead>
     <tr>
-      <th>Author</th>
-      <th>Topic</th>
-      <th>Answers</th>
-      <th>Tags</th>
+      <th>Автор</th>
+      <th>Тема</th>
+      <th>Ответов</th>
+      <th>Теги</th>
     </tr>
   </thead>
   <tbody>
