FEATURE: - added sorting to table component

--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -1,9 +1,9 @@
 <table>
   <thead>
     <tr>
-      <th>Автор</th>
-      <th>Тема</th>
-      <th>Ответов</th>
+      <th (click)="sortByAuthor()">Автор</th>
+      <th (click)="sortByTitle()">Тема</th>
+      <th (click)="sortByAnswers()">Ответов</th>
       <th>Теги</th>
     </tr>
   </thead>
