FEATURE: - added sorting to table in question-page component

--- a/src/app/pages/question-page/question-page.component.html
+++ b/src/app/pages/question-page/question-page.component.html
@@ -7,9 +7,9 @@
     <table>
       <thead>
         <tr>
-          <th>Автор</th>
+          <th (click)="sortByAuthor()">Автор</th>
           <th>Принят</th>
-          <th>Дата ответа</th>
+          <th (click)="sortByDate()">Дата ответа</th>
           <th>Ссылка на ответ</th>
         </tr>
       </thead>
