--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+
+body, html {
+  height: 100%;
+}
+
+.page {
+  height: 100%;
+}
+
+.pointer {
+  cursor: pointer;
+}
