FEATURE: - added tabindices

--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -1,9 +1,9 @@
 <table class="table table-sm">
   <thead>
     <tr>
-      <th (click)="sortByAuthor()" class="pointer">Автор <i [class]="'fa ' + (isAuthorDesc ? 'fa-arrow-up' : 'fa-arrow-down')"></i></th>
-      <th (click)="sortByTitle()" class="pointer">Тема <i [class]="'fa ' + (isTitleDesc ? 'fa-arrow-up' : 'fa-arrow-down')"></i></th>
-      <th (click)="sortByAnswers()" class="pointer">Ответов <i [class]="'fa ' + (isAnswersDesc ? 'fa-arrow-up' : 'fa-arrow-down')"></i></th>
+      <th (click)="sortByAuthor()" class="pointer" tabindex="1">Автор <i [class]="'fa ' + (isAuthorDesc ? 'fa-arrow-up' : 'fa-arrow-down')"></i></th>
+      <th (click)="sortByTitle()" class="pointer" tabindex="1">Тема <i [class]="'fa ' + (isTitleDesc ? 'fa-arrow-up' : 'fa-arrow-down')"></i></th>
+      <th (click)="sortByAnswers()" class="pointer" tabindex="1">Ответов <i [class]="'fa ' + (isAnswersDesc ? 'fa-arrow-up' : 'fa-arrow-down')"></i></th>
       <th>Теги</th>
     </tr>
   </thead>
